Add load_page and move app initialization

--- a/l10n/ru.json
+++ b/l10n/ru.json
@@ -9,5 +9,6 @@
   "low": "Низкий",
   "high": "Высокий",
   "doTill": "Сделать до",
-  "delete": "Удалить"
+  "delete": "Удалить",
+  "initError": "Ошибка инициализации"
 }
