--- a/l10n/en.json
+++ b/l10n/en.json
@@ -9,5 +9,6 @@
   "low": "Low",
   "high": "High",
   "doTill": "Do it till",
-  "delete": "Delete"
+  "delete": "Delete",
+  "initError": "Initialization error"
 }
